syntax = "proto3";

package iam;

option go_package = ".;proto";
message Credentials { 
    string access_key_id = 1;
    string secret_access_key = 2;
    string region = 3;
}

message User { 
    string name = 1;
    string description = 2;
    string arn = 3;
    repeated Credentials credentials = 4;
    repeated Policy policies = 5;
}

message Policy { 
    string policy = 1; // this will be the json
}

message CreateUserRequest { 
    string name = 1;
    string description = 2;
    repeated Policy policies = 3;
}

message CreateUserResponse { 
    User user = 1;
}

service IAMService { 
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {};
}